--- a/src/css/style.css
+++ b/src/css/style.css
@@ -61,10 +61,9 @@ h1.title {
     position: relative;
     padding-bottom: 100px;
     background-color: rgb(235, 255, 251, 0.3);
-    /* background-image: url('../img/back.png'); */
     border-top-left-radius: 0.5em;
     border-bottom-left-radius: 0.5em;
-    flex: 3;
+    flex-grow: 2;
     border-right: 1px solid darkslategray;
 }
 
@@ -79,12 +78,12 @@ h1.title {
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: #ffffff;
+    background-color: #e28c8c;
     opacity: 0.8;
 }
 
 .chaos_connection_error::after {
-    content: 'Ошибка. Проверьте соединение с сервером.';
+    content: 'Error!!! Проверьте соединение с сервером.';
     font-size: 22px;
     font-weight: bold;
 }
@@ -630,14 +629,14 @@ h1.title {
     
     display: flex;
     flex-direction: column;
-    flex: 1;
+    flex-grow: 1;
     background-color: rgba(255, 255, 255, 0.5);
     border-top-right-radius: 0.5em;
     border-bottom-right-radius: 0.5em;
 }
 
 .chaos_side_header {
-    width: 335px;
+    width: 250px;
     background-color: #1e617cc2;
 
     border-top-right-radius: 0.3em;
@@ -669,6 +668,7 @@ h1.title {
 }
 
 .chaos_side_list {
+    width: 95%;
     list-style: none;
     margin: 0;
     padding: 20px 40px;
@@ -677,15 +677,15 @@ h1.title {
 
 .chaos_side_item {
     position: relative;
-    width: 255px;
+    width: 80%;
     box-sizing: border-box;
-    background-color: #ffffff;
     border-radius: 0.5em;
     margin-bottom: 10px;
-    padding: 7px 15px 7px 45px;
-    font-size: 1.2em;
+    padding: 11px 15px 7px 45px;
+    font-size: 100%;
     word-break: break-word;
     cursor: pointer;
+    align-items: center;
 }
 
 .chaos_side_item:hover {
@@ -694,7 +694,7 @@ h1.title {
 }
 
 .chaos_side_item span {
-    font-weight: bold;
+    font-weight: 300;
 }
 
 .chaos_side_links::before {
@@ -705,6 +705,7 @@ h1.title {
     left: 15px;
     top: 12px;
     background: no-repeat center/contain url('../img/icons/link.png');
+    align-items: center;
 }
 
 .chaos_side_files::before {
