--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-image: url(/src/img/bgr_image.jpeg);
+    background-image: url(/src/img/bgr_image.png);
     background-attachment: fixed;
     
     background-repeat: no-repeat;
