--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,15 +1,16 @@
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-image: url(/src/img/bgr_image.png);
+    background-color: cornflowerblue;
+    background-image: linear-gradient(rgb(0, 195, 255), rgb(187, 255, 0));
     background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-repeat: repeat;
+    
 }
 .title_wrapper{
 display: flex;
 width: 90%;
 justify-content: center;
-background-color: #74caeca9(255, 255, 255, 0.8);
+background-color: #74caeca9(255, 255, 255, 0.9);
 border: 2px solid #ffffff;
 border-radius: 12px;
 color: #ffffff;
